log
Wed, May 14, 2025  8:19:10 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  8:30:15 AM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
6afbbd6
Wed, May 14, 2025  8:31:24 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4db74db
Wed, May 14, 2025  8:34:00 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
493ad81
Wed, May 14, 2025  8:35:45 AM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4711cbb
Wed, May 14, 2025  8:36:32 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
21f7ca4
Wed, May 14, 2025  8:38:30 AM: 
 tests:  0|5
total_score: 0/70
6998cd4
Wed, May 14, 2025  8:39:19 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7ab48bb
Wed, May 14, 2025  8:50:42 AM: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2fa992e
Wed, May 14, 2025  8:56:33 AM: 
 sudoku.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
6553165
Wed, May 14, 2025  8:59:59 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b217bdb
Wed, May 14, 2025  9:04:20 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
test.c: In function 'is_valid':
sudoku.c:60:19: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         int i=3*(k/3) + (p/3) ;
                 ~~^~~
cc1.exe: all warnings being treated as errors
fa3111a
Wed, May 14, 2025  9:05:50 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
3402db3
Wed, May 14, 2025  9:09:38 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
496c99e
Wed, May 14, 2025  9:20:30 AM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
5b84ccb
Wed, May 14, 2025  9:30:44 AM: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|3
total_score: 35/70
26c1c99
Wed, May 14, 2025  9:32:03 AM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
761d551
ju., 15 de may. de 2025 16:22:33: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
294edb1
ju., 15 de may. de 2025 16:23:48: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c865dba
ju., 15 de may. de 2025 16:24:29: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f0f6043
ju., 15 de may. de 2025 16:33:23: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
822af34
ju., 15 de may. de 2025 16:33:42: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
37ada0a
ju., 15 de may. de 2025 16:37:47: 
 tests:  5|3
total_score: 35/70
7e2dc71
